[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "AQE"
version = "0.1.0"
authors = [
    { name = "Meow", email = "example.example.1.mm@icloud.com" }
]
description = "Anti-Quantum Encryption - ポスト量子時代向け暗号ライブラリ"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography :: Post-Quantum",
]
keywords = ["quantum", "encryption", "cryptography", "post-quantum", "security"]
dependencies = [
    "cryptography>=36.0.0",
    "pycryptodome>=3.14.0",
    "configparser>=5.3.0",
    "asyncio>=3.4.3",
    "liboqs-python>=0.7.0",
]
